Scrollbar fix and about section

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -77,13 +77,9 @@
     }
 }
 
-html {
-    scrollbar-gutter: stable;
-}
-
 :root {
     color-scheme: dark;
-    scrollbar-width: 0px;
+    scrollbar-width: 12px;
     scrollbar-color: theme(colors.stone.800);
 }
 
